# ROBOTIS-OP3-Demo

./: .gitignore  .robotis_op3_demo.rosinstall  .travis.yml  README.md
ball_detector/: CMakeLists.txt  package.xml
ball_detector/cfg/: DetectorParams.cfg  DetectorParamsBlue.cfg  DetectorParamsRed.cfg  detector_params.cfg
ball_detector/include/ball_detector/: ball_detector.h  ball_detector_config.h
ball_detector/launch/: ball_detector.launch  ball_detector_from_usb_cam.launch  ball_detector_from_uvc.launch  ball_detector_params.yaml  ball_detector_params_default.yaml
ball_detector/msg/: BallDetectorParams.msg
ball_detector/src/: ball_detector.cpp  ball_detector_node.cpp
goalpost_detector/: CMakeLists.txt  package.xml
goalpost_detector/cfg/: goalpost_detector_params.cfg
goalpost_detector/include/goalpost_detector/: goalpost_detector.h  goalpost_detector_config.h
goalpost_detector/launch/: goalpost_detector.launch  goalpost_detector_params.yaml  goalpost_detector_usb_cam.launch
goalpost_detector/msg/: LineSetStamped.msg
goalpost_detector/src/: goalpost_detector.cpp  goalpost_detector_node.cpp
op3_ball_detector/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_ball_detector/cfg/: DetectorParams.cfg  DetectorParamsBlue.cfg  DetectorParamsRed.cfg
op3_ball_detector/config/: ball_detector_params.yaml  ball_detector_params_op_prototype.yaml  red_ball_config.yaml
op3_ball_detector/include/op3_ball_detector/: ball_detector.h  ball_detector_config.h
op3_ball_detector/launch/: ball_detector.launch  ball_detector_from_usb_cam.launch  ball_detector_from_uvc.launch
op3_ball_detector/msg/: BallDetectorParams.msg  SaveImageParams.msg
op3_ball_detector/py/: dataset.csv  lightanalysis.py  noiseanalysis.py
op3_ball_detector/src/: ball_detector.cpp  ball_detector_node.cpp
op3_ball_detector/srv/: GetParameters.srv  SaveImage.srv  SetParameters.srv  SwitchDetection.srv
op3_bringup/: CMakeLists.txt  package.xml
op3_bringup/launch/: op3_bringup_visualization.launch
op3_bringup/rviz/: op3_bringup.rviz
op3_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_demo/include/op3_demo/: action_demo.h  ball_follower.h  ball_tracker.h  button_test.h  face_tracker.h  keeper_demo.h  mic_test.h  op_demo.h  pk_demo.h  soccer_demo.h  vision_demo.h
op3_demo/launch/: demo.launch  face_detection_op3.launch  self_test.launch
op3_demo/list/: action_script.yaml  action_script_bk.yaml
op3_demo/script/: action_script.yaml
op3_demo/src/: demo_node.cpp  soccer_demo_node.cpp  test_node.cpp
op3_demo/src/action/: action_demo.cpp
op3_demo/src/soccer/: ball_follower.cpp  ball_tracker.cpp  keeper_demo.cpp  pk_demo.cpp  soccer_demo.cpp
op3_demo/src/test/: button_test.cpp  mic_test.cpp
op3_demo/src/vision/: face_tracker.cpp  vision_demo.cpp
op3_read_write_demo/: CMakeLists.txt  package.xml
op3_read_write_demo/launch/: op3_read_write.launch
op3_read_write_demo/src/: read_write.cpp
op3_tele_op/: CMakeLists.txt  package.xml
op3_tele_op/include/op3_tele_op/: op3_tele_op.h
op3_tele_op/launch/: op3_tele_op.launch
op3_tele_op/src/: op3_tele_op.cpp  op3_tele_op_node.cpp
robotis_op3_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
