<?xml version="1.0"?>
<package>
  <name>op3_demo</name>
  <version>0.1.0</version>
  <description>
    op3 default demo
    It includes three demontrations(soccer demo, vision demo, action script demo)
  </description>
  <license>BSD</license>
  <author email="kmjung@robotis.com">kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ball_detector</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>op3_walking_module_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_math</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>ball_detector</run_depend>
  <run_depend>robotis_controller_msgs</run_depend>
  <run_depend>op3_walking_module_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>robotis_math</run_depend>
</package>
