<?xml version="1.0"?>
<package format="2">
  <name>op3_demo</name>
  <version>0.1.1</version>
  <description>
    op3 default demo
    It includes three demontrations(soccer demo, vision demo, action script demo)
  </description>
  <license>Apache License 2.0</license>
  <author email="kmjung@robotis.com">kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>ball_detector</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>op3_walking_module_msgs</depend>
  <depend>op3_action_module_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>robotis_math</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
</package>
